@@ -1,0 +1,69 @@
+<?php
+// $Id: views_module.test,v 1.1.4.2 2010-04-29 18:26:02 merlinofchaos Exp $
+module_load_include('test', 'views', 'tests/views_query');
+class viewsModuleTest extends ViewsSqlTest {
+  public static function getInfo() {
+    return array(
+    'name' => 'Tests views.module',
+    'description' => 'Tests some basic functions of views.module',
+    'group' => 'Views',
+    );
+  }
+  
+  public function setUp() {
+    parent::setUp();
+  }
+  
+  public function test_views_trim_text() {
+    // Test unicode, @see http://drupal.org/node/513396#comment-2839416
+    $text = array(
+      'Tuy nhiên, những hi vọng',
+      'Giả sử chúng tôi có 3 Apple',
+      'siêu nhỏ này là bộ xử lý',
+      'Di động của nhà sản xuất Phần Lan',
+      'khoảng cách từ đại lí đến',
+      'của hãng bao gồm ba dòng',
+      'сд асд асд ас',
+      'асд асд асд ас'
+    );
+    // Just test maxlength without word boundry.
+    $alter = array(
+      'max_length' => 10,
+    );
+    $expect = array(
+      'Tuy nhiên,',
+      'Giả sử chú',
+      'siêu nhỏ n',
+      'Di động củ',
+      'khoảng các',
+      'của hãng b',
+      'сд асд асд',
+      'асд асд ас',
+    );
+
+    foreach ($text as $key => $line) {
+      $result_text = views_trim_text($alter, $line);
+      $this->assertEqual($result_text, $expect[$key]);
+    }
+
+    // Test also word_boundary
+    $alter['word_boundary'] = TRUE;
+    $expect = array(
+      'Tuy nhiên',
+      'Giả sử',
+      'siêu nhỏ',
+      'Di động',
+      'khoảng',
+      'của hãng',
+      'сд асд',
+      'асд асд',
+    );
+    
+    foreach ($text as $key => $line) {
+      $result_text = views_trim_text($alter, $line);
+      debug($result_text);
+      debug($expect[$key]);
+      $this->assertEqual($result_text, $expect[$key]);
+    }
+  }
+}
